--- a/Project_Final_Group6.ipynb
+++ b/Project_Final_Group6.ipynb
@@ -3369,7 +3369,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "โมเดล Naive Bayes สามารถทำนายได้ถูกต้องในระดับสูงกว่าโมเดล KNN และ Decision Tree ที่ได้ผลการทดสอบเทียบเท่ากันด้วยค่าความแม่นยำของโมเดลบนข้อมูลทดสอบคือ 83.71% และ 81.70% ตามลำดับ\n",
+        "โมเดล KNN ที่ได้หลังจากทำการประเมินโมเดลด้วยวิธี cross-validation คือ 85.94% สามารถทำนายได้ถูกต้องในระดับสูงกว่าโมเดล Naive Bayes และ Decision Tree \n",
         "\n"
       ],
       "metadata": {
