--- a/Project_Final_Group6.ipynb
+++ b/Project_Final_Group6.ipynb
@@ -2848,7 +2848,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "จากการหาค่า k โดยการใช้ GridSearchCV  พบว่าค่า k ที่เหมาะสมที่สุดสำหรับโมเดล KNN Classifier คือ 10 และความแม่นยำของโมเดล KNN Classifier บนชุดข้อมูลทดสอบที่สร้างขึ้นมีความแม่นยำในการทำนายผลของชุดข้อมูลทดสอบอยู่ที่ 83.71% ซึ่งมีค่าน้อยกว่าค่าความแม่นยำที่ได้จากการทำ cross-validation โดยค่าความแม่นยำที่ดีที่สุดที่ได้จาก cross-validation คือ 85.94% และเมื่อนำโมเดลที่สร้างขึ้นจากพารามิเตอร์ดังกล่าวมาใช้กับชุดข้อมูลสำหรับการทดสอบ ได้ค่าความแม่นยำอยู่ที่ 84.82% ซึ่งมีค่าใกล้เคียงกับค่าความแม่นยำที่ได้จาก cross-validation% "
+        "จากการหาค่า k โดยการใช้ GridSearchCV  พบว่าค่า k ที่เหมาะสมที่สุดสำหรับโมเดล KNN Classifier คือ 10 และความแม่นยำของโมเดล KNN Classifier บนชุดข้อมูลทดสอบที่สร้างขึ้นมีความแม่นยำในการทำนายผลของชุดข้อมูลทดสอบอยู่ที่ 83.71% ซึ่งมีค่าน้อยกว่าค่าความแม่นยำที่ได้จากการทำ cross-validation โดยค่าความแม่นยำที่ดีที่สุดที่ได้จาก cross-validation คือ 85.94% และเมื่อนำโมเดลที่สร้างขึ้นจากพารามิเตอร์ดังกล่าวมาใช้กับชุดข้อมูลสำหรับการทดสอบ ได้ค่าความแม่นยำอยู่ที่ 84.82% ซึ่งมีค่าใกล้เคียงกับค่าความแม่นยำที่ได้จาก cross-validation"
       ],
       "metadata": {
         "id": "IS_0t2pvK7eO"
